--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <body>
     <div class="wrapper">
         <div class="section" id="intro">
-            <h1>Bookbinder JS</h1>
+            <span class="row">
+                <h1 style="display: inline-block;">Bookbinder JS</h1>
+                <div class="v-badge">v1.0.0</div>
+            </span>
             A Javascript-based app for formatting PDFs for bookbinding. For more information, feature requests, or to
             contribute, view the project's <a href="https://github.com/momijizukamori/bookbinder-js">Github repository</a>.
             If you have issues with this version, you can try the <a href="old/">old version</a> instead, which only supports folio layouts.
             <center style="font-family:monospace;
-    padding-top: 0.75em;font-variant-caps: small-caps;">current version: 1.0.0</center>
+    padding-top: 0.75em;font-variant-caps: small-caps;">This community imposer tool is developed and maintained by <br/> members of the Renegade Bindery Discord Server. </center>
         </div>
         <form id="bookbinder" name="bookbinder">
             <div class="section" id="input">
